--- a/plots.ipynb
+++ b/plots.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From c:\\Users\\andre\\anaconda3\\envs\\tf\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import the modules\n",
     "import numpy as np\n",
@@ -24,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,14 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['tags', 'movies', 'users', 'ratings']\n"
+      "['users', 'tags', 'ratings', 'movies']\n"
      ]
     }
    ],
@@ -74,12 +65,119 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['userid', 'movieid', 'rating', 'timestamp']\n",
+      "['movieid', 'title', 'released_year', 'genre_1', 'genre_2', 'genre_3', 'genre_4', 'genre_5', 'genre_6', 'genre_7', 'genre_8', 'genre_9', 'genre_10']\n",
+      "['userid', 'movieid', 'tag', 'timestamp']\n",
+      "['userid', 'user_name']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# View column names\n",
+    "ratings_cols = Ratings.__table__.columns.keys()\n",
+    "movies_cols = Movies.__table__.columns.keys()\n",
+    "tags_cols = Tags.__table__.columns.keys()\n",
+    "users_cols = Users.__table__.columns.keys()\n",
+    "\n",
+    "print(ratings_cols)\n",
+    "print(movies_cols)\n",
+    "print(tags_cols)\n",
+    "print(users_cols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22050\n",
+      "(array(['Action', 'Adventure', 'Animation', 'Children', 'Comedy', 'Crime',\n",
+      "       'Documentary', 'Drama', 'Fantasy', 'Film-Noir', 'Horror', 'IMAX',\n",
+      "       'Musical', 'Mystery', 'Romance', 'Sci-Fi', 'Thriller', 'War',\n",
+      "       'Western'], dtype='<U11'), array([1828, 1263,  611,  664, 3756, 1199,  440, 4361,  779,   87,  978,\n",
+      "        158,  334,  573, 1596,  980, 1894,  382,  167], dtype=int64))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Genre      \n",
+       "Drama          4361\n",
+       "Comedy         3756\n",
+       "Thriller       1894\n",
+       "Action         1828\n",
+       "Romance        1596\n",
+       "Adventure      1263\n",
+       "Crime          1199\n",
+       "Sci-Fi          980\n",
+       "Horror          978\n",
+       "Fantasy         779\n",
+       "Children        664\n",
+       "Animation       611\n",
+       "Mystery         573\n",
+       "Documentary     440\n",
+       "War             382\n",
+       "Musical         334\n",
+       "Western         167\n",
+       "IMAX            158\n",
+       "Film-Noir        87\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Query data\n",
+    "data = session.query(Movies.genre_1, Movies.genre_2, Movies.genre_3, Movies.genre_4, Movies.genre_5, \\\n",
+    "                     Movies.genre_6, Movies.genre_7, Movies.genre_8, Movies.genre_9, Movies.genre_10).all()\n",
+    "\n",
+    "session.close()\n",
+    "\n",
+    "# Store data\n",
+    "genres = []\n",
+    "for genre_1, genre_2, genre_3, genre_4, genre_5, genre_6, genre_7, genre_8, genre_9, genre_10 in data:\n",
+    "    genres.append(genre_1)\n",
+    "    genres.append(genre_2)\n",
+    "    genres.append(genre_3)\n",
+    "    genres.append(genre_4)\n",
+    "    genres.append(genre_5)\n",
+    "    genres.append(genre_6)\n",
+    "    genres.append(genre_7)\n",
+    "    genres.append(genre_8)\n",
+    "    genres.append(genre_9)\n",
+    "    genres.append(genre_10)\n",
+    "\n",
+    "# Remove none-types from list and count\n",
+    "genres_clean = [x for x in genres if x != None]\n",
+    "print(len(genres_clean))\n",
+    "print(np.unique(genres_clean, return_counts=True))\n",
+    "\n",
+    "# Value counts for each genre\n",
+    "genres_df = pd.DataFrame(genres, columns=[\"Genre\"])\n",
+    "genres_df = genres_df.value_counts()\n",
+    "genres_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Query data\n",
-    "# Store data\n",
     "# Graph data"
    ]
   }
