--- a/Project4_accmodel_local_v2.ipynb
+++ b/Project4_accmodel_local_v2.ipynb
@@ -1041,6 +1041,132 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If you enjoyed Despicable Me (2008), here are the top 10 movies we think you'll also enjoy!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Released Year</th>\n",
+       "      <th>Distance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Kung Fu Panda</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>0.369476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>How to Train Your Dragon</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>0.392950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Harry Potter and the Half-Blood Prince</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>0.421600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Megamind</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>0.431181</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Iron Man 2</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>0.440971</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>The Amazing Spider-Man</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>0.444662</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Star Wars: Episode VII - The Force Awakens</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>0.447232</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Guardians of the Galaxy</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>0.447753</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Harry Potter and the Deathly Hallows: Part 2</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>0.451612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>The Avengers</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>0.456070</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                          Title  Released Year  Distance\n",
+       "0                                 Kung Fu Panda           2008  0.369476\n",
+       "1                      How to Train Your Dragon           2010  0.392950\n",
+       "2        Harry Potter and the Half-Blood Prince           2009  0.421600\n",
+       "3                                      Megamind           2010  0.431181\n",
+       "4                                    Iron Man 2           2010  0.440971\n",
+       "5                        The Amazing Spider-Man           2012  0.444662\n",
+       "6    Star Wars: Episode VII - The Force Awakens           2015  0.447232\n",
+       "7                       Guardians of the Galaxy           2014  0.447753\n",
+       "8  Harry Potter and the Deathly Hallows: Part 2           2011  0.451612\n",
+       "9                                  The Avengers           2012  0.456070"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "getrecs('Despicable Me')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
