--- a/Project4_accmodel_local_v2.ipynb
+++ b/Project4_accmodel_local_v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
     "from sklearn.neighbors import NearestNeighbors, KNeighborsRegressor\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.model_selection import train_test_split  # Import the missing module\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# Load movies and ratings data\n",
     "movies = pd.read_csv('Predictive model data/movies_title_reformatted.csv')\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,6 +44,7 @@
     "# Pivot ratings data to create a movies-user matrix\n",
     "moviesdb = ratings.pivot(index='movieId', columns='userId', values='rating')\n",
     "moviesdb.fillna(0, inplace=True)\n",
+    "\n",
     "# Filter movies and users based on a threshold\n",
     "nouser = ratings.groupby('movieId')['rating'].agg('count')\n",
     "nomovies = ratings.groupby('userId')['rating'].agg('count')\n",
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -275,18 +276,18 @@
        "9  Harold & Kumar Escape from Guantanamo Bay           2008  0.464452"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "getrecs('The other Guys')"
+    "getrecs('the other guys')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +402,7 @@
        "9                       Up           2009  0.368857"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +528,7 @@
        "9           The Hangover           2009  0.369214"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +654,7 @@
        "9    The Secret Life of Walter Mitty           2013  0.435959"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +780,7 @@
        "9                                         Spider-Man           2002  0.398373"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +906,7 @@
        "9  The Dark Knight Rises           2012  0.404911"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1031,7 +1032,7 @@
        "9       Zombieland           2009  0.398180"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1042,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1157,7 +1158,7 @@
        "9                                  The Avengers           2012  0.456070"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1167,15 +1168,267 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If you enjoyed The Avengers (1998), here are the top 10 movies we think you'll also enjoy!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Released Year</th>\n",
+       "      <th>Distance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Sphere</td>\n",
+       "      <td>1998</td>\n",
+       "      <td>0.464465</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>The Edge</td>\n",
+       "      <td>1997</td>\n",
+       "      <td>0.502303</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Anaconda</td>\n",
+       "      <td>1997</td>\n",
+       "      <td>0.507164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>William Shakespeare's A Midsummer Night's Dream</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>0.548800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Snake Eyes</td>\n",
+       "      <td>1998</td>\n",
+       "      <td>0.563339</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Reindeer Games</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>0.564510</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Speed 2: Cruise Control</td>\n",
+       "      <td>1997</td>\n",
+       "      <td>0.567220</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Mercury Rising</td>\n",
+       "      <td>1998</td>\n",
+       "      <td>0.568688</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>The Haunting</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>0.578154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Matilda</td>\n",
+       "      <td>1996</td>\n",
+       "      <td>0.582712</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             Title  Released Year  Distance\n",
+       "0                                           Sphere           1998  0.464465\n",
+       "1                                         The Edge           1997  0.502303\n",
+       "2                                         Anaconda           1997  0.507164\n",
+       "3  William Shakespeare's A Midsummer Night's Dream           1999  0.548800\n",
+       "4                                       Snake Eyes           1998  0.563339\n",
+       "5                                   Reindeer Games           2000  0.564510\n",
+       "6                          Speed 2: Cruise Control           1997  0.567220\n",
+       "7                                   Mercury Rising           1998  0.568688\n",
+       "8                                     The Haunting           1999  0.578154\n",
+       "9                                          Matilda           1996  0.582712"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "**Scrap Work**"
+    "getrecs('the avengers')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If you enjoyed Django Unchained (2009), here are the top 10 movies we think you'll also enjoy!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Released Year</th>\n",
+       "      <th>Distance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Inglourious Basterds</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>0.312611</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Interstellar</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>0.326071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>The Dark Knight Rises</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>0.353634</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>The Grand Budapest Hotel</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>0.361227</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Mad Max: Fury Road</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>0.361928</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Inception</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>0.362976</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>The Hangover</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>0.407104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Up</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>0.411537</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>The Revenant</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>0.421573</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Looper</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>0.425359</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      Title  Released Year  Distance\n",
+       "0      Inglourious Basterds           2009  0.312611\n",
+       "1              Interstellar           2014  0.326071\n",
+       "2     The Dark Knight Rises           2012  0.353634\n",
+       "3  The Grand Budapest Hotel           2014  0.361227\n",
+       "4        Mad Max: Fury Road           2015  0.361928\n",
+       "5                 Inception           2010  0.362976\n",
+       "6              The Hangover           2009  0.407104\n",
+       "7                        Up           2009  0.411537\n",
+       "8              The Revenant           2015  0.421573\n",
+       "9                    Looper           2012  0.425359"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "getrecs('Django Unchained')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Scrap Work shit - working previous version**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
