--- a/Project4_accmodel_local_v2.ipynb
+++ b/Project4_accmodel_local_v2.ipynb
@@ -1168,6 +1168,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Remove duplicates in dataset so that it doesn't return an unexpected result? Getrecs('The Avengers') returns a movie from 1998.**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
