--- a/Project4_accmodel_local_v2.ipynb
+++ b/Project4_accmodel_local_v2.ipynb
@@ -1430,7 +1430,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Scrap Work shit - working previous version**"
+    "**Scrap Work - working previous version**"
    ]
   },
   {
